Build should work with annotation processor now